@@ -18,6 +18,7 @@ Bug IDs that start with "K" can be found in the Kenai Bugzilla
 		  ----------------------------
 The following bugs have been fixed in the 1.5.2 release.
 
+K  5820	allow IMAP search to throw SearchException when search is too complex
 K  6203	IMAP astring parsing incorrect
 
 
